--- a/problems.css
+++ b/problems.css
@@ -7,6 +7,11 @@
     border-radius: 10px;
 }
 
+a {
+  text-decoration: none;
+  color: #C4C5C7;
+}
+
 table, th, td {
     border-collapse: collapse;
 }
