--- a/calls.css
+++ b/calls.css
@@ -1,18 +1,49 @@
-table {
+.calls {
+    background-color: #2F3136;
+    margin-left: 2em;
+    margin-top: 2em;
+    padding: 3px;
+    border-radius: 10px;
+}
+
+textarea {
+  height: 100%;
+  width: 100%;
+  /* box-sizing: border-box; */
+  resize: vertical;
+  font-size: 18px;;
+}
+
+a {
+  text-decoration: none;
+  color: #C4C5C7;
+}
+
+table, th, td {
     border-collapse: collapse;
+}
+
+/* removing outside borders */
+table td {
+    border: 1px solid #ffffff; 
+}
+  table tr:first-child td {
+    border-top: 0;
+}
+  table tr td:first-child {
+    border-left: 0;
+}
+  table tr:last-child td {
+    border-bottom: 0;
+}
+  table tr td:last-child {
+    border-right: 0;
+}
+
+table  {
     width: 100%;
-    font-size: 18px;
-}
-
-tr {
-    border-bottom: 1px solid #5a5e66;
-}
-
-th {
-    text-align: left;
-    padding-left: 10px; 
 }
 
 td {
-    padding: 4px 10px;
+    padding: 15px;
 }
