--- a/equipment.css
+++ b/equipment.css
@@ -1,12 +1,12 @@
 table {
-    table-layout: fixed;
     border-collapse: collapse;
+    table-layout: fixed;
     width: 100%;
     font-size: 18px;
 }
 
 tr {
-    border-bottom: 1px solid #5a5e66;
+    border: none;
 }
 
 th {
@@ -16,4 +16,27 @@ th {
 
 td {
     padding: 4px 10px;
+    border-right: solid 1px #5a5e66; 
+    border-left: solid 1px #5a5e66;
+}
+table tr td:first-child {
+    border-left: 0;
+}
+table tr td:last-child {
+    border-right: 0;
+}
+
+.equipment {
+    background-color: #2F3136;
+    /* width: 50em; */
+    margin-left: 2em;
+    margin-right:2em;
+    margin-top: 1em;
+    padding: 3px;
+    border-radius: 10px;
+}
+
+#titles {
+    margin-left:2em;
+    padding:3px;
 }
