--- a/users.css
+++ b/users.css
@@ -1,37 +1,42 @@
-.user {
-    background-color: #2F3136;
-    width: 50em;
-    margin-left: 2em;
-    margin-top: 2em;
-    padding: 3px;
-    border-radius: 10px;
+table {
+  border-collapse: collapse;
+  table-layout: fixed;
+  width: 100%;
+  font-size: 18px;
 }
 
-table, th, td {
-    border-collapse: collapse;
+tr {
+  border: none;
 }
 
-/* removing outside borders */
-table td {
-    border: 1px solid #ffffff;
-}
-  table tr:first-child td {
-    border-top: 0;
-}
-  table tr td:first-child {
-    border-left: 0;
-}
-  table tr:last-child td {
-    border-bottom: 0;
-}
-  table tr td:last-child {
-    border-right: 0;
-}
-
-table  {
-    width: 100%;
+th {
+  text-align: left;
+  padding-left: 10px; 
 }
 
 td {
-    padding: 15px;
+  padding: 4px 10px;
+  border-right: solid 1px #5a5e66; 
+  border-left: solid 1px #5a5e66;
+}
+table tr td:first-child {
+  border-left: 0;
+}
+table tr td:last-child {
+  border-right: 0;
+}
+
+.users {
+  background-color: #2F3136;
+  /* width: 50em; */
+  margin-left: 2em;
+  margin-right:2em;
+  margin-top: 1em;
+  padding: 3px;
+  border-radius: 10px;
+}
+
+#titles {
+  margin-left:2em;
+  padding:3px;
 }
